--- a/index.html
+++ b/index.html
@@ -1,10 +1,27 @@
 <!DOCTYPE html>
-     <html>
-     <head>
-         <title>Dolinacrystal</title>
-         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-     </head>
-     <body>
-         <iframe src="https://tap777play.github.io/mygamesvryad/index.html" style="width: 100%; height: 100%; border: none;"></iframe>
-     </body>
-     </html>
+<html>
+<head>
+    <meta charset="UTF-8">
+    <title>Генератор уровней</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            max-width: 800px;
+            margin: 0 auto;
+            padding: 20px;
+            /* Фон удалён */
+        }
+        
+        .container {
+            background: #f5f5f5;
+            padding: 20px;
+            border-radius: 8px;
+        }
+
+        /* Остальные стили без изменений */
+    </style>
+</head>
+<body>
+    <!-- Весь HTML-код остаётся без изменений -->
+</body>
+</html>
