--- a/project/sociall/index.html
+++ b/project/sociall/index.html
@@ -21,6 +21,7 @@
                 <ul class="nav-menu">
                     <li><a href="#home">Главная</a></li>
                     <li><a href="#about">О фонде</a></li>
+                    <li><a href="#business-support">Бизнес</a></li>
                     <li><a href="#support">Поддержка</a></li>
                     <li><a href="#services-table">Услуги</a></li>
                     <li><a href="#achievements">Достижения</a></li>
@@ -135,6 +136,97 @@
                         <img src="image/russia-map.svg" alt="Карта России с региональными представителями" class="russia-map-svg">
                         <p class="map-caption">Сеть представителей охватывает все регионы России</p>
                     </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Business Support Section -->
+    <section id="business-support" class="business-support">
+        <div class="container">
+            <div class="section-header">
+                <h2>Поддержка и гранты для малого бизнеса</h2>
+                <p>Развитие предпринимательства и экономическая поддержка калмыков</p>
+            </div>
+            <div class="business-support-image-container">
+                <img src="image/3.jpg" alt="Поддержка малого бизнеса" class="business-support-main-image">
+            </div>
+            <div class="business-support-grid">
+                <div class="business-support-card">
+                    <div class="card-header">
+                        <i class="fas fa-chart-line"></i>
+                        <h3>Грантовая поддержка</h3>
+                    </div>
+                    <p>Финансовая помощь для развития бизнес-проектов калмыков</p>
+                    <ul>
+                        <li>Стартовые гранты для ИП</li>
+                        <li>Поддержка инновационных проектов</li>
+                        <li>Гранты на развитие производства</li>
+                        <li>Субсидии на закупку оборудования</li>
+                        <li>Поддержка сельскохозяйственных проектов</li>
+                        <li>Гранты на цифровизацию бизнеса</li>
+                    </ul>
+                </div>
+                <div class="business-support-card">
+                    <div class="card-header">
+                        <i class="fas fa-lightbulb"></i>
+                        <h3>Бизнес-инкубатор</h3>
+                    </div>
+                    <p>Поддержка начинающих предпринимателей и стартапов</p>
+                    <ul>
+                        <li>Бизнес-планирование</li>
+                        <li>Менторская поддержка</li>
+                        <li>Образовательные программы</li>
+                        <li>Сетевые мероприятия</li>
+                        <li>Помощь в регистрации</li>
+                        <li>Поддержка в поиске инвесторов</li>
+                    </ul>
+                </div>
+                <div class="business-support-card">
+                    <div class="card-header">
+                        <i class="fas fa-handshake"></i>
+                        <h3>Партнерские программы</h3>
+                    </div>
+                    <p>Создание бизнес-связей и партнерств</p>
+                    <ul>
+                        <li>Бизнес-клубы калмыков</li>
+                        <li>Межрегиональное сотрудничество</li>
+                        <li>Партнерство с крупными компаниями</li>
+                        <li>Создание кооперативов</li>
+                        <li>Совместные проекты</li>
+                        <li>Экспортные инициативы</li>
+                    </ul>
+                </div>
+                <div class="business-support-card">
+                    <div class="card-header">
+                        <i class="fas fa-graduation-cap"></i>
+                        <h3>Образование и консультации</h3>
+                    </div>
+                    <p>Повышение предпринимательских навыков</p>
+                    <ul>
+                        <li>Курсы предпринимательства</li>
+                        <li>Семинары по налогообложению</li>
+                        <li>Тренинги по маркетингу</li>
+                        <li>Консультации юристов</li>
+                        <li>Бухгалтерская поддержка</li>
+                        <li>Обучение цифровым технологиям</li>
+                    </ul>
+                </div>
+
+                <div class="business-support-card">
+                    <div class="card-header">
+                        <i class="fas fa-globe"></i>
+                        <h3>Экспортная поддержка</h3>
+                    </div>
+                    <p>Содействие выходу на международные рынки</p>
+                    <ul>
+                        <li>Участие в выставках</li>
+                        <li>Поиск зарубежных партнеров</li>
+                        <li>Поддержка экспортных контрактов</li>
+                        <li>Сертификация продукции</li>
+                        <li>Логистическая поддержка</li>
+                        <li>Валютное консультирование</li>
+                    </ul>
                 </div>
             </div>
         </div>
@@ -295,6 +387,12 @@
                         </tr>
                     </thead>
                     <tbody>
+                        <tr>
+                            <td>Поддержка бизнеса</td>
+                            <td>Гранты, консультации, микрофинансирование, обучение</td>
+                            <td>7-90 дней</td>
+                            <td>Развитие предпринимательства</td>
+                        </tr>
                         <tr>
                             <td>Социальная поддержка</td>
                             <td>Консультации, материальная помощь, сопровождение</td>
