--- a/OAE-TOUR/blog-single.html
+++ b/OAE-TOUR/blog-single.html
@@ -85,7 +85,7 @@
                 <span class="tag">Photography Tips</span>
             </div>
             <div class="article-author">
-                <img src="images/team/author-ahmed.webp" alt="Ahmed Al-Rashid" class="author-avatar">
+                <img src="images/Michael Chen.jpg" alt="Ahmed Al-Rashid" class="author-avatar">
                 <div class="author-info">
                     <h4 class="author-name">Ahmed Al-Rashid</h4>
                     <p class="author-title">Desert Guide & Photography Expert</p>
@@ -98,7 +98,7 @@
     <section class="article-hero">
         <div class="container">
             <div class="hero-image-container">
-                <img src="images/blog/featured-sunrise-desert.webp" alt="Desert Sunrise in UAE" class="hero-image">
+                <img src="images/Sunset Luxury Safari.webp" alt="Desert Sunrise in UAE" class="hero-image">
                 <div class="image-caption">
                     <p>Golden hour lighting creates magical shadows across the dunes of Dubai Desert Conservation Reserve</p>
                 </div>
@@ -196,16 +196,13 @@
                     <div class="article-actions">
                         <div class="action-buttons">
                             <button class="action-btn like-btn" id="likeBtn">
-                                <img src="images/icons/like-icon.webp" alt="Like" class="btn-icon">
                                 <span class="btn-text">Like</span>
                                 <span class="btn-count">127</span>
                             </button>
                             <button class="action-btn share-btn" id="shareBtn">
-                                <img src="images/icons/share-icon.webp" alt="Share" class="btn-icon">
                                 <span class="btn-text">Share</span>
                             </button>
                             <button class="action-btn bookmark-btn" id="bookmarkBtn">
-                                <img src="images/icons/bookmark-icon.webp" alt="Bookmark" class="btn-icon">
                                 <span class="btn-text">Save</span>
                             </button>
                         </div>
@@ -227,7 +224,7 @@
                     <div class="sidebar-widget author-widget">
                         <h3 class="widget-title">About the Author</h3>
                         <div class="author-bio">
-                            <img src="images/team/author-ahmed.webp" alt="Ahmed Al-Rashid" class="author-photo">
+                            <img src="images/Michael Chen.jpg" alt="Ahmed Al-Rashid" class="author-photo">
                             <h4 class="author-name">Ahmed Al-Rashid</h4>
                             <p class="author-title">Desert Guide & Photography Expert</p>
                             <p class="author-description">Ahmed has been guiding desert adventures for over 8 years and is passionate about sharing the beauty of the UAE's desert landscapes through photography and storytelling.</p>
@@ -263,7 +260,7 @@
                         <div class="related-articles">
                             <article class="related-article">
                                 <div class="related-image">
-                                    <img src="images/blog/desert-photography-guide.webp" alt="Desert Photography Guide" class="related-thumbnail">
+                                    <img src="images/Dubai Desert Conservation Reserve.jpeg" alt="Desert Photography Guide" class="related-thumbnail">
                                 </div>
                                 <div class="related-content">
                                     <h4 class="related-title">Desert Photography: Capturing the Perfect Shot</h4>
@@ -275,7 +272,7 @@
                             </article>
                             <article class="related-article">
                                 <div class="related-image">
-                                    <img src="images/blog/arabian-oryx-encounter.webp" alt="Arabian Oryx Encounter" class="related-thumbnail">
+                                    <img src="images/Dubai Desert Conservation Reserve.jpeg" alt="Arabian Oryx Encounter" class="related-thumbnail">
                                 </div>
                                 <div class="related-content">
                                     <h4 class="related-title">Spotting Arabian Oryx in Dubai Desert</h4>
@@ -287,7 +284,7 @@
                             </article>
                             <article class="related-article">
                                 <div class="related-image">
-                                    <img src="images/blog/camel-riding-tips.webp" alt="Camel Riding Tips" class="related-thumbnail">
+                                    <img src="images/Liwa Desert.jfif" alt="Camel Riding Tips" class="related-thumbnail">
                                 </div>
                                 <div class="related-content">
                                     <h4 class="related-title">Camel Riding Tips for First-Time Visitors</h4>
@@ -311,7 +308,7 @@
             <div class="articles-grid">
                 <article class="similar-article">
                     <div class="article-image">
-                        <img src="images/blog/desert-photography-guide.webp" alt="Desert Photography Guide" class="article-thumbnail">
+                        <img src="images/Dubai Desert Conservation Reserve.jpeg" alt="Desert Photography Guide" class="article-thumbnail">
                         <div class="article-badge">Photography</div>
                     </div>
                     <div class="article-content">
@@ -333,7 +330,7 @@
 
                 <article class="similar-article">
                     <div class="article-image">
-                        <img src="images/blog/arabian-oryx-encounter.webp" alt="Arabian Oryx Encounter" class="article-thumbnail">
+                        <img src="images/Dubai Desert Conservation Reserve.jpeg" alt="Arabian Oryx Encounter" class="article-thumbnail">
                         <div class="article-badge">Wildlife</div>
                     </div>
                     <div class="article-content">
@@ -355,7 +352,7 @@
 
                 <article class="similar-article">
                     <div class="article-image">
-                        <img src="images/blog/camel-riding-tips.webp" alt="Camel Riding Tips" class="article-thumbnail">
+                        <img src="images/Liwa Desert.jfif" alt="Camel Riding Tips" class="article-thumbnail">
                         <div class="article-badge">Adventure</div>
                     </div>
                     <div class="article-content">
