--- a/OAE-TOUR/parks.html
+++ b/OAE-TOUR/parks.html
@@ -134,10 +134,10 @@
                 </div>
                 <div class="view-toggle">
                     <button class="view-btn active" data-view="grid">
-                        <img src="images/icons/grid-view-icon.webp" alt="Grid View">
+                        Grid
                     </button>
                     <button class="view-btn" data-view="list">
-                        <img src="images/icons/list-view-icon.webp" alt="List View">
+                        List
                     </button>
                 </div>
             </div>
@@ -173,15 +173,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-12 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 450</span>
                             </div>
                         </div>
@@ -222,15 +219,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>5-6 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-8 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 650</span>
                             </div>
                         </div>
@@ -271,15 +265,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-15 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 380</span>
                             </div>
                         </div>
@@ -320,15 +311,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-20 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 320</span>
                             </div>
                         </div>
@@ -369,15 +357,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-10 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 750</span>
                             </div>
                         </div>
@@ -418,15 +403,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-12 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 420</span>
                             </div>
                         </div>
@@ -467,15 +449,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-6 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 850</span>
                             </div>
                         </div>
@@ -516,15 +495,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>5-6 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-8 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 950</span>
                             </div>
                         </div>
@@ -565,15 +541,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-10 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 680</span>
                             </div>
                         </div>
@@ -614,15 +587,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>8-50 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 1,200</span>
                             </div>
                         </div>
@@ -663,15 +633,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>Flexible</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>1-8 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 1,500</span>
                             </div>
                         </div>
@@ -712,15 +679,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-15 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 420</span>
                             </div>
                         </div>
@@ -761,15 +725,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>4-20 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 350</span>
                             </div>
                         </div>
@@ -810,15 +771,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>4-5 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-8 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 780</span>
                             </div>
                         </div>
@@ -859,15 +817,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-12 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 520</span>
                             </div>
                         </div>
@@ -908,15 +863,12 @@
                         </div>
                         <div class="park-details">
                             <div class="detail-item">
-                                <img src="images/icons/clock-icon.webp" alt="Duration" class="detail-icon">
                                 <span>3-4 hours</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/group-icon.webp" alt="Group Size" class="detail-icon">
                                 <span>2-15 people</span>
                             </div>
                             <div class="detail-item">
-                                <img src="images/icons/price-icon.webp" alt="Price" class="detail-icon">
                                 <span>From AED 380</span>
                             </div>
                         </div>
