--- a/OAE-TOUR/vip.html
+++ b/OAE-TOUR/vip.html
@@ -57,13 +57,12 @@
     <!-- VIP Banner -->
     <section class="vip-banner">
         <div class="banner-background">
-            <img src="images/hero/vip-desert-luxury.webp" alt="VIP Desert Luxury Experience" class="banner-image">
+            <img src="images/Sunset Luxury Safari.webp" alt="VIP Desert Luxury Experience" class="banner-image">
             <div class="banner-overlay"></div>
         </div>
         <div class="container">
             <div class="banner-content">
                 <div class="vip-badge">
-                    <img src="images/icons/vip-crown-icon.webp" alt="VIP" class="crown-icon">
                     <span class="badge-text">VIP EXCLUSIVE</span>
                 </div>
                 <h1 class="banner-title">Luxury Safari Breakfast Experiences</h1>
@@ -148,15 +147,12 @@
                         <p class="package-description">The ultimate luxury desert experience with private tent, personal chef, and exclusive wildlife encounters.</p>
                         <div class="package-features">
                             <div class="feature-item">
-                                <img src="images/icons/private-tent-icon.webp" alt="Private Tent" class="feature-icon">
                                 <span>Private Luxury Tent</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/personal-chef-icon.webp" alt="Personal Chef" class="feature-icon">
                                 <span>Personal Chef</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/private-guide-icon.webp" alt="Private Guide" class="feature-icon">
                                 <span>Dedicated Guide</span>
                             </div>
                         </div>
@@ -200,15 +196,12 @@
                         <p class="package-description">Exclusive access to UNESCO World Heritage site with private breakfast in traditional majlis setting.</p>
                         <div class="package-features">
                             <div class="feature-item">
-                                <img src="images/icons/unesco-access-icon.webp" alt="UNESCO Access" class="feature-icon">
                                 <span>Private UNESCO Access</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/traditional-majlis-icon.webp" alt="Traditional Majlis" class="feature-icon">
                                 <span>Traditional Majlis</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/cultural-expert-icon.webp" alt="Cultural Expert" class="feature-icon">
                                 <span>Cultural Expert Guide</span>
                             </div>
                         </div>
@@ -252,15 +245,12 @@
                         <p class="package-description">Premium sunset experience with champagne breakfast and private photography session.</p>
                         <div class="package-features">
                             <div class="feature-item">
-                                <img src="images/icons/champagne-icon.webp" alt="Champagne" class="feature-icon">
                                 <span>Champagne Service</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/private-photography-icon.webp" alt="Private Photography" class="feature-icon">
                                 <span>Private Photography</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/sunset-views-icon.webp" alt="Sunset Views" class="feature-icon">
                                 <span>Exclusive Sunset Views</span>
                             </div>
                         </div>
@@ -304,15 +294,12 @@
                         <p class="package-description">Tailored corporate retreat with team building activities and luxury amenities for business groups.</p>
                         <div class="package-features">
                             <div class="feature-item">
-                                <img src="images/icons/team-building-icon.webp" alt="Team Building" class="feature-icon">
                                 <span>Team Building</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/meeting-facilities-icon.webp" alt="Meeting Facilities" class="feature-icon">
                                 <span>Meeting Facilities</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/corporate-catering-icon.webp" alt="Corporate Catering" class="feature-icon">
                                 <span>Corporate Catering</span>
                             </div>
                         </div>
@@ -356,15 +343,12 @@
                         <p class="package-description">Completely customized experience designed specifically for your preferences and requirements.</p>
                         <div class="package-features">
                             <div class="feature-item">
-                                <img src="images/icons/custom-design-icon.webp" alt="Custom Design" class="feature-icon">
                                 <span>Custom Design</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/personal-concierge-icon.webp" alt="Personal Concierge" class="feature-icon">
                                 <span>Personal Concierge</span>
                             </div>
                             <div class="feature-item">
-                                <img src="images/icons/flexible-schedule-icon.webp" alt="Flexible Schedule" class="feature-icon">
                                 <span>Flexible Schedule</span>
                             </div>
                         </div>
