--- a/SocialSpin (3)/contact.html
+++ b/SocialSpin (3)/contact.html
@@ -520,11 +520,11 @@
 
     
 
-    <main>
+    <main style="padding-top: 120px;">
 
         <!-- Применяем точно такую же структуру как в одностраничном экспорте -->
 
-        <section id="contact" class="contact-section" style="background: linear-gradient(to bottom, #001a1a, #142e2e)">
+        <section id="contact" class="contact-section" style="background: transparent">
 
           <div class="contact-container">
 
